--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,185 @@
-body {
-  background-color: #a29bfec2;
+/* #CF9F6A--Dark Tan; #F4E4C4--Light Tan; #315A55--Blue Green; #C2B59B--Taupe;
+#76913B--Sage Green; #A24531--Terracotta
+Trebuchet MS = display: font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ Portada Reg = body: font-family: portada, serif; font-weight: 400; font-style: normal;
+*/
+
+
+/* FIX DROPDOWN CLICK BOX, DROPDOWN STYLING, HOVER STATE buttons, HERO IMAGE, BACKGROUND COLOR VS GREEN */
+
+.thumbnail {
+  height: 250px;
+  width: 250px;
 }
+
+body {
+  background-color: #C2B59B;
+}
+
+nav {
+  float: right;
+  margin: 40px;
+}
+
+
+#hero-image {
+  background-image: url(../img/airplane-hero.jpg);
+  background-repeat: no-repeat;
+  margin: 0px auto 40px;  
+  width: 90%;
+  height: 600px;
+}
+
+#hero-image h1 {
+  color: #A24531;
+}
+
+hr {
+  width: 90%;
+  border: .5px solid #A24531;
+}
+
+#criteria {
+  display: inline-flex;
+}
+
+
+h1 {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 42px;
+  text-align: center;
+  padding-top: 100px;
+  color: #F4E4C4;
+}
+
+/* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-box {
+  background-color: transparent;
+  width: 250px;
+  height: 250px;
+  margin: 50px;
+}
+
+/* This container is needed to position the front and back side */
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do a horizontal flip when you move the mouse over the flip box container */
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-box-front {
+  background-color: #A24531;
+  color: #F4E4C4;
+}
+
+/* Style the back side */
+.flip-box-back {
+  background-color: #315A55;
+  color: #F4E4C4;
+  transform: rotateY(180deg);
+}
+
+h2 {
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+  font-size: 26px;
+  color: #F4E4C4;
+  padding-top: 50px;
+
+}
+
+#see-saved-button{
+  height: 50px;
+  width: 200px;
+  margin: 30px;
+}
+
+h3 {
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+  font-size: 26px;
+  color: #315A55;
+}
+
+p {
+  text-align: center;
+  font-size: 20px;
+  font-family: portada, serif; font-weight: 400; font-style: normal;
+  line-height: 1.5;
+  margin: 20px auto;
+}
+
+
+button {
+  background-color: #F4E4C4;
+  border: 3px solid #A24531;
+  border-radius: 5%;
+}
+
+#submit-button{
+  height: 50px;
+  width: 90px;
+}
+
+button :hover{
+  background-color: #A24531;
+  color: #F4E4C4;
+}
+
+#select-explain {
+  text-align: center;
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+}
+
+
+a {
+  text-decoration: none;
+  color: #A24531;
+  font-size: 16px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #A24531;
+  font-size: 20px;
+  line-height: 3;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+footer{
+  text-align: center;
+  max-height: 50px;
+  margin: 200px auto 50px;
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+  border-top: 1px solid #A24531;
+  padding-top: 20px;
+
+  width: 90%;
+}
+
+
