--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ Trebuchet MS = display: font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Luc
 */
 
 
-/* FIX DROPDOWN CLICK BOX, DROPDOWN STYLING, HOVER STATE buttons, HERO IMAGE, BACKGROUND COLOR VS GREEN */
+/* FIX DROPDOWN CLICK BOX, DROPDOWN STYLING, HOVER STATE buttons,
+BACKGROUND COLOR, flip criteria placement */
 
 .thumbnail {
   height: 250px;
