--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ nav {
 
 
 #hero-image {
-  background-image: url(../img/airplane-hero.jpg);
+  background-image: url(../img/hero-at-night.jpg);
   background-repeat: no-repeat;
   margin: 0px auto 40px;  
   width: 90%;
@@ -32,7 +32,7 @@ nav {
 }
 
 #hero-image h1 {
-  color: #A24531;
+  color: #F4E4C4;
 }
 
 hr {
@@ -59,6 +59,7 @@ h1 {
   width: 250px;
   height: 250px;
   margin: 50px;
+  border: 3px solid #315A55;
 }
 
 /* This container is needed to position the front and back side */
