--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,45 @@ body {
   background-color: whitesmoke;
 }
 
-nav {
-  float: right;
-  margin: 40px;
+button {
+  background-color: whitesmoke ;
+  color: #662027; 
+  border-left: 10px solid #662027;
+  border-right: 10px solid #662027;
+  border-top:0px solid #662027; 
+  border-bottom:0px solid #662027;
+  border-radius: 5%;
+  padding: 3px;
 }
 
+
+button :hover{
+  background-color: #662027;
+  border: 3px solid #662027;
+  color: whitesmoke;
+  border-radius: 3%;
+}
+
+#see-saved-button{
+  margin: 30px;
+}
+
+
+nav {
+  float: right;
+  margin: 33px 50px;
+  }
+
+#dest {
+  color: #662027;
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+  font-size: 14px;
+  background-color: whitesmoke;
+  border: 1px solid #662027;
+  text-align: center;
+}
 
 #hero-image {
   background-image: url(../img/hero-at-night.jpg);
@@ -113,9 +147,6 @@ h2 {
 
 }
 
-#see-saved-button{
-  margin: 30px;
-}
 
 h3 {
   font-family: portada, serif; 
@@ -134,19 +165,6 @@ p {
 }
 
 
-button {
-  background-color: #662027;
-  border: 3px solid #662027;
-  border-radius: 3%;
-}
-
-
-button :hover{
-  background-color: whitesmoke ;
-  color: #662027; 
-  border: 5px solid whitesmoke;
-  border-radius: 3%;
-}
 
 #select-explain {
   text-align: center;
@@ -157,9 +175,13 @@ button :hover{
 
 
 a {
+    color: #662027; 
+
   text-decoration: none;
-  color: whitesmoke;
   font-size: 16px;
+  font-family: portada, serif; 
+  font-weight: 300; 
+  font-style: normal;
 }
 
 footer a {
@@ -169,13 +191,14 @@ footer a {
   line-height: 3;
   font-weight: 500;
   margin-bottom: 15px;
+  padding: 3px;
 }
 
 footer a:hover{
   border-right: 15px solid #255766;
   border-left: 15px solid #255766;
   border-radius: 3%;
-  padding: 10px 10px;
+  padding: 0px 10px;
 }
 
 footer p {
