--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ h1 {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 42px;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 70px;
   color: whitesmoke;
 }
 
@@ -177,6 +177,17 @@ h3 {
   color: #255766;
 }
 
+h4 {
+  font-family: portada, serif; 
+  font-weight: 400; 
+  font-style: normal;
+  font-size: 26px;
+  color: #255766;
+  text-align: center;
+  font-size: 20px;
+}
+
+
 p {
   text-align: center;
   font-size: 20px;
@@ -205,7 +216,7 @@ a {
 
 footer a {
   text-decoration: none;
-  color: #662027;
+  color: #255766;
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 15px;
@@ -226,7 +237,7 @@ footer p {
   font-size: 15px;
   line-height: 3;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin: 15px auto;
 }
 
 footer{
