--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,7 @@
-/* #CF9F6A--Dark Tan; #F4E4C4--Light Tan; #255766--Blue Green;
-rgb(88, 114, 31)--Sage Green;whitesmoke--Offwhite; #802E1B--Brick Red
+/* #255766--Blue Green; #F15A29--Orange; #802E1B--Cranberry; whitesmoke
 Trebuchet MS = display: font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  Portada Reg = body: font-family: portada, serif; font-weight: 400; font-style: normal;
 */
-
-
-/* FIX DROPDOWN CLICK BOX, DROPDOWN STYLING, HOVER STATE buttons,
-flip criteria placement */
 
 .thumbnail {
   height: 200px;
@@ -146,19 +141,19 @@ demonstrate that the flip itself goes out of the box on hover (remove perspectiv
 
 /* Style the front side (fallback if image is missing) */
 .flip-box-front {
-  background-color: #662027;
+  background-color:#255766;
   color:whitesmoke;
 }
 
 /* Style the back side */
 .flip-box-back {
-  background-color: #255766;
+  background-color: #662027;
   color: whitesmoke;
   transform: rotateY(180deg);
 }
 
 .flip-box-back-2 {
-  background-color: rgb(88, 114, 31);
+  background-color: #D35A29;
   color: whitesmoke;
   transform: rotateY(180deg);
 }
