blue border changed on snow pages via Destinations.css

--- a/css/Destinations.css
+++ b/css/Destinations.css
@@ -71,14 +71,14 @@ background-color:#CF5B2F;
   border-color: #255766;
 }
 
-/* snow pages blue #255766--Blue Green with cranberry #802E1B--Cranberry accent */
+/* snow pages blue #397dcf--*New* Blue because of pics with cranberry #802E1B--Cranberry accent */
 
 .snow {
-  background-color: #255766;
+  background-color: #397dcf;
 }
 
 .snow h3 {
-  color: #255766;
+  color: #397dcf;
 }
 .snow h1 {
   color: #662027;
