--- a/css/Destinations.css
+++ b/css/Destinations.css
@@ -45,13 +45,13 @@ background-color:#CF5B2F;
   color: #255766;
 }
 
-.sun a {
+.sun a, .sun .save-destination{
   color:#255766;
   border-right: 5px solid #255766;
   border-left: 5px solid #255766;
 }
 
-.sun a:hover {
+.sun a:hover, .sun .save-destination:hover{
   color: whitesmoke;
   background-color: #255766;
 }
@@ -105,7 +105,7 @@ main {
   font-style: normal;
 } */
 
-a {
+a, .save-destination{
   text-decoration: none;
   text-align: center;
   color: #662027;
@@ -116,11 +116,12 @@ a {
   border-right: 5px solid #662027;
   border-left: 5px solid #662027;
   padding: 2px 8px;
+  width: 200px;
 }
 
 
 
-a:hover{
+a:hover, .save-destination:hover{
   background-color: #662027;
   color:whitesmoke
 }
